css/styles.css
/* ... */
/* Animate the old view header and back button off to the left and fade out */
.navigation-view .old-header.go h1,
.navigation-view .old-header.go .backBarButton {
  -webkit-transform: translate3d(-100px, 0, 0);
  -moz-transform: translate3d(-100px, 0, 0);
  -ms-transform: translate3d(-100px, 0, 0);
  transform: translate3d(-100px, 0, 0);
  opacity: 0;
}
/* fade out all other buttons */
.navigation-view .old-header.go .barButton:not(.backBarButton) {
  opacity: 0;
}
/* when going back in the stack, move header and back button in the other direction */
.navigation-view .old-header.back.go h1,
.navigation-view .old-header.back.go .backBarButton {
  -webkit-transform: translate3d(100px, 0, 0);
  -moz-transform: translate3d(100px, 0, 0);
  -ms-transform: translate3d(100px, 0, 0);
  transform: translate3d(100px, 0, 0);
}
/* new header buttons should start at 0 opacity */
.navigation-view .new-header .barButton:not(.backBarButton) {
  opacity: 0;
}
/* new title and back button should move in from the right */
.navigation-view .new-header h1,
.navigation-view .new-header .backBarButton {
  -webkit-transform: translate3d(100px, 0, 0);
  -moz-transform: translate3d(100px, 0, 0);
  -ms-transform: translate3d(100px, 0, 0);
  transform: translate3d(100px, 0, 0);
  opacity: 0;
}
/* when going back in the stack new header should come in from the left */
.navigation-view .new-header.back h1,
.navigation-view .new-header.back .backBarButton {
  -webkit-transform: translate3d(-100px, 0, 0);
  -moz-transform: translate3d(-100px, 0, 0);
  -ms-transform: translate3d(-100px, 0, 0);
  transform: translate3d(-100px, 0, 0);
}
/* new buttons should fade in */
.navigation-view .new-header.go .barButton:not(.backBarButton) {
  opacity: 1;
}
/* new headers should move to the center */
.navigation-view .new-header.go h1,
.navigation-view .new-header.go .backBarButton {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  opacity: 1;
}

/* position modal view fixed over the whole page */
.modal-view {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 6;
}
/* if animating, set transitions and transform off screen */
.modal-view.animate {
  -webkit-transform: translate3d(0, 120%, 0);
  -moz-transform: translate3d(0, 120%, 0);
  -ms-transform: translate3d(0, 120%, 0);
  transform: translate3d(0, 120%, 0);
  -webkit-transition: 0.4s ease-in-out -webkit-transform;
  -moz-transition: 0.4s ease-in-out -moz-transform;
  -ms-transition: 0.4s ease-in-out -ms-transform;
  transition: 0.4s ease-in-out transform;
}
/* when the modal-view-show class is applied, move modal up */
.modal-view.animate.modal-view-show {
  -webkit-transform: translate3d(0, 0%, 0);
  -moz-transform: translate3d(0, 0%, 0);
  -ms-transform: translate3d(0, 0%, 0);
  transform: translate3d(0, 0%, 0);
}


/* Visual Styles for navigation views */
.navigation-title {
  background: -webkit-linear-gradient(top, #c3cbdc 0%, #627296 100%);
  background: linear-gradient(top, #c3cbdc 0%, #627296 100%);
  border-top: 1px solid #fff;
  border-bottom: 1px solid #4a5b7f;
  padding: 0 10px;
  margin: 0;
  box-shadow: 0 0 4px rgba(0,0,0,0.4);
  z-index: 2;
  position: relative;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}
.navigation-title.old-header {
  box-shadow: none;
}

.navigation-title-text {
  font-size: 1.429em;
  line-height: 40px;
  vertical-align: middle;
  margin: 0;
  text-shadow: rgba(0,0,0,0.8) 0 -1px 0;
  color: #fff;
  font-family: Helvetica, Arial, sans-serif;
  text-transform: none;
  text-align: center;
  font-weight: bold;
}

.navigation-title .barButtons {
  position: absolute;
  top: 5px;
}
.navigation-title .barButtons.left {
  left: 11px;
}
.navigation-title .barButtons.right {
  right: 11px;
}

.navigation-content {
  -webkit-overflow-scrolling: touch; /* overflow-scrolling: touch enables smooth */
  overflow-scrolling: touch;         /* native-like scrolling on iOS 5+ */
  position: absolute;
  overflow: auto;
  left: 0;
  right: 0;
  top: 42px;
  bottom: 0;
  z-index: 1;
  padding: 20px 16px;
  background-color: #dde2ed;
}


/* CHAT MESSAGE STYLES */
/* chat messages should scroll and be positioned with space at the bottom for the
   new message form */
#chat-messages {
  list-style-type: none;
  padding: 8px 8px 0;
  margin: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 38px;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  overflow-scrolling: touch;
}

.chat-message {
  margin: 0 0 7px;
  padding: 9px;
  background: -webkit-linear-gradient(top, #eaeaea 0%, #ddd 10%, #ddd 90%, #f4f4f4 100%);
  background: linear-gradient(to bottom, #eaeaea 0%, #ddd 10%, #ddd 90%, #f4f4f4 100%);
  border-radius: 8px;
  width: intrinsic;
  min-width: 10%;
  max-width: 75%;
  border: 1px solid #95979d;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.2);
  position: relative;
  clear: right;
  -webkit-user-select: auto; /* let users copy messages */
}
/* use pseudo :after element as the rounded "shine" element on top of the chat bubble */
.chat-message:after {
  content: '';
  display: block;
  position: absolute;
  left: 6px;
  right: 6px;
  top: 0;
  height: 12px;
  border-radius: 6px;
  background: rgba(255, 255, 255, 0.4);
}
/* ... */

